--- a/wp-content/themes/lons/assets/scss/_header.scss
+++ b/wp-content/themes/lons/assets/scss/_header.scss
@@ -182,8 +182,17 @@ body.home #masthead a {
 		margin-right: 0.9375vw;
 	}
 }
+/* Medium Up */
+@media only screen and (max-width: 64.9375em) {
+	.archive .title-bar {
+		.title-bar-title {
+			margin-left: rem-calc(42);
+		}
+	}
+}
 
-@media onlsy screen and (min-width: 40em) {
+/* Medium Up */
+@media only screen and (min-width: 40em) {
 	#masthead {
 		&.menu-open {
 			min-height: rem-calc(43);
